--- a/templates/lista_transferencias.html
+++ b/templates/lista_transferencias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            background-color: white;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #007bff;
+            background-color: #166534; /* Verde oscuro */
             color: white;
             padding: 1rem;
             text-align: center;
@@ -38,7 +38,7 @@
         }
 
         th {
-            background-color: #007bff;
+            background-color: #166534; /* Verde oscuro */
             color: white;
         }
 
@@ -50,7 +50,7 @@
             display: inline-block;
             padding: 0.5rem 1rem;
             color: white;
-            background-color: #28a745;
+            background-color: #16a34a; /* Verde medio */
             text-decoration: none;
             border-radius: 5px;
             font-size: 1rem;
@@ -59,7 +59,7 @@
         }
 
         .btn:hover {
-            background-color: #218838;
+            background-color: #0f8a3c; /* Verde más oscuro */
         }
 
     </style>
