--- a/templates/home.html
+++ b/templates/home.html
@@ -121,7 +121,7 @@
     </main>
 
     <footer>
-        &copy; Página creada por Luis Blacio
+        &copy; Página creada por Luis Blacio <3
     </footer>
 </body>
 </html>
